Add container header sidenav main e footer

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,31 @@
 $color-primary-dark: #201f1e;
+$color-blue: #1BBAE1;
+$color-black: #2e2e2d;
+$color-gray: #DADAE3;
+$color-gray-dark: #777;
+$color-white: #FFF; 
+$color-transparent: rgba(255, 255, 255, .5);
+$color-alto: #D3D3D3;
+$color-zest: #e67e22;
+$color-jungle-green: #27ae60;
+$color-cinnabar: #e74c3c; 
+$color-amethyst: #af64cc;
+$color-abbey: #777;
+$color-mischka: #DADAE3;
 
 $height-header: 50px;
 $height-footer: 50px;
 $width-sidenav: 240px;
+
+@mixin profile-avatar {
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1609106/headshot.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  border: 2px solid rgba(255, 255, 255, .2);
+}
+
+@mixin box-shadow {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+}
+
